err/counterparty-lib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.11.dist-info'...
Listing './lib/python3.5/site-packages/Flask_HTTPAuth-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/appdirs-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/json_rpc-1.10.3.dist-info'...
Listing './lib/python3.5/site-packages/jsonrpc'...
Listing './lib/python3.5/site-packages/jsonrpc/backend'...
Listing './lib/python3.5/site-packages/jsonrpc/tests'...
Listing './lib/python3.5/site-packages/jsonrpc/tests/test_backend_django'...
Listing './lib/python3.5/site-packages/jsonrpc/tests/test_backend_flask'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycoin'...
Listing './lib/python3.5/site-packages/pycoin/blockchain'...
Listing './lib/python3.5/site-packages/pycoin/cmds'...
Listing './lib/python3.5/site-packages/pycoin/contrib'...
Listing './lib/python3.5/site-packages/pycoin/convention'...
Listing './lib/python3.5/site-packages/pycoin/ecdsa'...
Listing './lib/python3.5/site-packages/pycoin/ecdsa/native'...
Listing './lib/python3.5/site-packages/pycoin/key'...
Listing './lib/python3.5/site-packages/pycoin/message'...
Listing './lib/python3.5/site-packages/pycoin/networks'...
Listing './lib/python3.5/site-packages/pycoin/serialize'...
Listing './lib/python3.5/site-packages/pycoin/services'...
Listing './lib/python3.5/site-packages/pycoin/tx'...
Listing './lib/python3.5/site-packages/pycoin/tx/pay_to'...
Listing './lib/python3.5/site-packages/pycoin/tx/script'...
Listing './lib/python3.5/site-packages/pycoin/wallet'...
Listing './lib/python3.5/site-packages/pycoin-0.77.egg-info'...
Listing './lib/python3.5/site-packages/pypandoc'...
Listing './lib/python3.5/site-packages/pypandoc-1.4.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.5.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_markdown-0.2.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
